Regression: Material Output inside node group not working if there is a Group Output Node #98231

Closed
opened 2022-05-18 20:01:28 +02:00 by Lê Hoàng Linh · 13 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
worked: 3.0.0
Caused by 7e712b2d6a

Short description of error
I need to swap my materials between "Eevee" and "Cycle" so I put 2 different "Material Output Node" directly in my group.
Normally, when I swap the color, the render viewport will give me real-time changing, now I have to swap "Render Engine" between "Eevee" and "Cycle" a few times to see the work.
Work well in 3.0 but not in 3.1 and 3.1.2

Workaround

  • remove the "Group Output Node" from to group and it works again.
  • Create material output node outside nodegroup. And connect BSDF output to material output node

Exact steps for others to reproduce the error
Create a group with "Material Output Node" and "Group Output Node" in it

  • Open .blend file
  • Select sphere which has material name This work in 3.0
  • try changing input value (color): nothing updates
    Bug Report.blend
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` worked: 3.0.0 Caused by 7e712b2d6a **Short description of error** I need to swap my materials between "Eevee" and "Cycle" so I put 2 different "Material Output Node" directly in my group. Normally, when I swap the color, the render viewport will give me real-time changing, now I have to swap "Render Engine" between "Eevee" and "Cycle" a few times to see the work. Work well in 3.0 but not in 3.1 and 3.1.2 Workaround - remove the "Group Output Node" from to group and it works again. - Create material output node outside nodegroup. And connect BSDF output to material output node **Exact steps for others to reproduce the error** Create a group with "Material Output Node" and "Group Output Node" in it - Open .blend file - Select sphere which has material name `This work in 3.0` - try changing input value (color): nothing updates [Bug Report.blend](https://archive.blender.org/developer/F13087471/Bug_Report.blend)

Added subscriber: @LeLinh

Added subscriber: @LeLinh
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. Finding the commit that has affected the real time update of material in viewport

I can confirm. Finding the commit that has affected the real time update of material in viewport
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Update in viewport is not happening since 7e712b2d6a
@JacquesLucke , can you check?

The Solution I have is to remove the "Group Output Node" from to group and it works again.

Yes, your workaround does the job in previous versions. But it's neither working after this commit 80859a6cb2
I'll open separate report for it.

Update in viewport is not happening since 7e712b2d6a @JacquesLucke , can you check? > The Solution I have is to remove the "Group Output Node" from to group and it works again. Yes, your workaround does the job in previous versions. But it's neither working after this commit 80859a6cb2 I'll open separate report for it.
Pratik Borhade changed title from "Material Output Nodes" inside node group not working if there is a "Group Output Node" to Regression: Material Output inside node group not working if there is a Group Output Node 2022-05-19 06:18:23 +02:00
Member

The current behavior is described in the is_output_node method. Will try to implement the todo comment there, with some luck that will solve the issue.

The current behavior is described in the `is_output_node` method. Will try to implement the todo comment there, with some luck that will solve the issue.
Jacques Lucke self-assigned this 2022-05-20 14:38:18 +02:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

It honestly seems pretty weird that a material output node can be nested inside a node group and still work, I would expect all material output nodes to be required to be on the top level.

However, maybe there's reasoning I'm missing or equally likely, it's not worth breaking existing behavior for a cleaner design?

It honestly seems pretty weird that a material output node can be nested inside a node group and still work, I would expect all material output nodes to be required to be on the top level. However, maybe there's reasoning I'm missing or equally likely, it's not worth breaking existing behavior for a cleaner design?
Member

I don't like it either, but it's not something we can break now. It's used quite a lot in practice.

I don't like it either, but it's not something we can break now. It's used quite a lot in practice.

This issue was referenced by 2d67b375a1

This issue was referenced by 2d67b375a15f8bb96233fc56a40be8cf545d08df

This issue was referenced by b81f1b8cf1

This issue was referenced by b81f1b8cf17196122a7203dc79f4c20c1cd9d5bf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98231
No description provided.