Fix T98231: missing update when material output is in group

Differential Revision: https://developer.blender.org/D14998